--- a/specification/containerregistry/resource-manager/Microsoft.ContainerRegistry/RegistryTasks/tspconfig.yaml
+++ b/specification/containerregistry/resource-manager/Microsoft.ContainerRegistry/RegistryTasks/tspconfig.yaml
@@ -1,3 +1,6 @@
+parameters:
+  "service-dir":
+    default: "sdk/containerregistry"
 emit:
   - "@azure-tools/typespec-autorest"
 options:
@@ -10,6 +13,42 @@ options:
     arm-resource-flattening: true
     arm-types-dir: "{project-root}/../../../../common-types/resource-management"
     emit-lro-options: "all"
+  "@azure-tools/typespec-csharp":
+    flavor: azure
+    package-dir: "Azure.ResourceManager.ContainerRegistry"
+    clear-output-folder: true
+    model-namespace: true
+    namespace: "{package-dir}"
+  "@azure-tools/typespec-python":
+    service-dir: "sdk/containerregistry"
+    package-dir: "azure-mgmt-containerregistrytasks"
+    namespace: "azure.mgmt.containerregistry"
+    generate-test: true
+    generate-sample: true
+    flavor: "azure"
+  "@azure-tools/typespec-java":
+    service-dir: "sdk/containerregistry"
+    package-dir: "azure-resourcemanager-containerregistrytasks"
+    namespace: "com.azure.resourcemanager.containerregistrytasks"
+    service-name: "ContainerRegistryTasks"
+    flavor: azure
+    use-object-for-unknown: true
+  "@azure-tools/typespec-ts":
+    package-dir: "arm-containerregistrytasks"
+    flavor: azure
+    experimental-extensible-enums: true
+    package-details:
+      name: "@azure/arm-containerregistrytasks"
+  "@azure-tools/typespec-go":
+    service-dir: "sdk/resourcemanager/containerregistry"
+    package-dir: "armcontainerregistrytasks"
+    module: "github.com/Azure/azure-sdk-for-go/{service-dir}/{package-dir}"
+    fix-const-stuttering: true
+    flavor: "azure"
+    generate-samples: true
+    generate-fakes: true
+    head-as-boolean: true
+    inject-spans: true
 linter:
   extends:
     - "@azure-tools/typespec-azure-rulesets/resource-manager"
