--- a/specification/databoxedge/cspell.yaml
+++ b/specification/databoxedge/cspell.yaml
@@ -17,6 +17,7 @@ words:
   - signup
   - updation
   - vcpu
+  - test
 overrides:
   - filename: >-
       **/specification/databoxedge/resource-manager/Microsoft.DataBoxEdge/stable/2019-03-01/databoxedge.json
