--- a/specification/cognitiveservices/Language.AnalyzeText/tspconfig.yaml
+++ b/specification/cognitiveservices/Language.AnalyzeText/tspconfig.yaml
@@ -20,9 +20,8 @@ options:
     namespace: "Azure.AI.Language.Text"
     flavor: azure
   "@azure-tools/typespec-python":
-    package-name: "azure-ai-textanalytics"
     package-dir: "azure-ai-textanalytics"
-    namespace: "azure.ai.language.text"
+    namespace: "azure.ai.textanalytics"
     generate-test: true
     generate-sample: true
     flavor: "azure"
